# lustre-stable

./: .cray-obs-config.xml  .gitignore  autoMakefile.am  autogen.sh  configure.ac  lustre.spec.in
config/: lustre-build-ldiskfs.m4  lustre-build-linux.m4  lustre-build-zfs.m4  lustre-build.m4
contrib/IEM/: 20-lustre_iem.conf  lustre_iem.spec  rpmbuild-lustre-iem.sh
contrib/lbuild/: funcs.sh  lbuild
contrib/scripts/: checkpatch.pl
cray-obs/: cray-lnet.pc  cray-lustre-api-devel.pc  cray-lustre-ari_c-rhine.spec  cray-lustre-ari_s-cos.spec  cray-lustre-ari_s-rhine.spec  cray-lustre-cfsutil-devel.pc  cray-lustre-client.spec  cray-lustre-default.spec  cray-lustre-dmp_c.spec  cray-lustre-ptlctl-devel.pc  cray-lustre.spec  module.in  version.in
ldiskfs/: .gitignore  ChangeLog  autogen.sh  configure.ac  lustre-ldiskfs.spec.in
ldiskfs/config/: ldiskfs-build.m4
ldiskfs/ldiskfs/: Makefile.in
libcfs/autoconf/: lustre-libcfs.m4
libcfs/libcfs/: Makefile.in  autoMakefile.am  crc32-pclmul_asm.S  debug.c  fail.c  hash.c  kernel_user_comm.c  libcfs_cpu.c  libcfs_string.c  module.c  nidstrings.c  tracefile.c  tracefile.h  upcall_cache.c  user-crc32pclmul.c  user-crypto.c  user-lock.c  user-prim.c  watchdog.c  workitem.c
lnet/: ChangeLog  autoMakefile.am
lnet/autoconf/: lustre-lnet.m4
lnet/doc/: Makefile.am
lnet/include/: cygwin-ioctl.h
lnet/klnds/: autoMakefile.am
lnet/libcfs/: autoMakefile.am  debug.c  lwt.c  module.c  nidstrings.c  tracefile.c  tracefile.h  user-bitops.c  user-lock.c  user-prim.c  user-tcpip.c  watchdog.c
lnet/lnet/: acceptor.c  api-errno.c  api-ni.c  autoMakefile.am  config.c  lib-eq.c  lib-md.c  lib-me.c  lib-move.c  lib-msg.c  lib-ptl.c  lo.c  module.c  peer.c  router.c  router_proc.c
lnet/selftest/: brw_test.c  conctl.c  conrpc.c  conrpc.h  console.c  console.h  framework.c  module.c  ping_test.c  rpc.c  rpc.h  selftest.h  timer.c  timer.h  workitem.c
lnet/ulnds/: autoMakefile.am
lnet/utils/: .gitignore  Makefile.am  debug.c  gmlndnid.c  lst.c  lstclient.c  parser.c  parser.h  portals.c  routerstat.c  wirecheck.c
lustre/: ChangeLog  autoMakefile.am
lustre-iokit/: ChangeLog  configure.ac  lustre-iokit.spec.in
lustre-iokit/mds-survey/: mds-survey
lustre-iokit/obdfilter-survey/: Makefile.am  README.obdfilter-survey  libecho  obdfilter-survey  plot-obdfilter
lustre/autoconf/: lustre-core.m4  lustre-version.ac
lustre/cmm/: cmm_device.c  cmm_object.c  mdc_device.c  mdc_object.c
lustre/conf/: 99-lustre.rules  Makefile.am
lustre/contrib/: packet-lustre.c
lustre/doc/: Makefile.am  l_adsidentity.8  lctl.8  lfs.1  mkfs.lustre.8  mount.lustre.8  tunefs.lustre.8
lustre/fid/: fid_handler.c  fid_internal.h  fid_request.c  fid_store.c  lproc_fid.c
lustre/fld/: fld_cache.c  fld_handler.c  fld_index.c  fld_internal.h  fld_request.c
lustre/include/: Makefile.am  cl_object.h  class_hash.h  dt_object.h  interval_tree.h  ioctl.h  lclient.h  liblustre.h  lprocfs_status.h  lu_object.h  lu_target.h  lustre_cache.h  lustre_capa.h  lustre_cfg.h  lustre_compat.h  lustre_debug.h  lustre_disk.h  lustre_dlm.h  lustre_dlm_flags.h  lustre_eacl.h  lustre_export.h  lustre_fid.h  lustre_fld.h  lustre_fsfilt.h  lustre_ha.h  lustre_handles.h  lustre_idmap.h  lustre_import.h  lustre_ioctl.h  lustre_lfsck.h  lustre_lib.h  lustre_lite.h  lustre_log.h  lustre_mdc.h  lustre_mds.h  lustre_net.h  lustre_nrs_tbf.h  lustre_osc.h  lustre_param.h  lustre_quota.h  (+14 more)
lustre/include/darwin/: lprocfs_status.h  lustre_compat.h  lustre_debug.h  lustre_dlm.h  lustre_fsfilt.h  lustre_handles.h  lustre_lib.h  lustre_lite.h  lustre_log.h  lustre_mds.h  lustre_net.h  lustre_quota.h  lustre_types.h  lustre_user.h  lvfs.h  obd.h  obd_class.h  obd_support.h
lustre/include/linux/: Makefile.am  lprocfs_status.h  lustre_compat25.h  lustre_debug.h  lustre_dlm.h  lustre_fsfilt.h  lustre_handles.h  lustre_intent.h  lustre_lib.h  lustre_lite.h  lustre_log.h  lustre_mds.h  lustre_net.h  lustre_patchless_compat.h  lustre_quota.h  lustre_types.h  lustre_user.h  lvfs.h  lvfs_linux.h  obd.h  obd_cksum.h  obd_class.h  obd_support.h
lustre/include/lustre/: Makefile.am  liblustreapi.h  ll_fiemap.h  lustre_idl.h  lustre_lfsck_user.h  lustre_user.h  lustreapi.h  types.h
lustre/include/uapi/linux/lustre/: lustre_idl.h  lustre_user.h
lustre/kernel_patches/: which_patch
lustre/lclient/: glimpse.c  lcommon_cl.c  lcommon_misc.c
lustre/ldlm/: Makefile.am  interval_tree.c  l_lock.c  ldlm_extent.c  ldlm_flock.c  ldlm_inodebits.c  ldlm_internal.h  ldlm_lib.c  ldlm_lock.c  ldlm_lockd.c  ldlm_plain.c  ldlm_pool.c  ldlm_reclaim.c  ldlm_request.c  ldlm_resource.c
lustre/lfsck/: lfsck_bookmark.c  lfsck_engine.c  lfsck_internal.h  lfsck_layout.c  lfsck_lib.c  lfsck_namespace.c
lustre/liblustre/: Makefile.am  dir.c  file.c  llite_cl.c  llite_lib.c  llite_lib.h  lutil.c  lutil.h  namei.c  rw.c  super.c
lustre/llite/: Makefile.in  autoMakefile.am  dcache.c  dir.c  file.c  lcommon_cl.c  llite_capa.c  llite_close.c  llite_internal.h  llite_lib.c  llite_mmap.c  llite_nfs.c  lloop.c  lproc_llite.c  namei.c  remote_perm.c  rw.c  rw26.c  statahead.c  super25.c  symlink.c  vvp_dev.c  vvp_io.c  vvp_page.c  xattr.c  xattr_cache.c
lustre/lmv/: lmv_fld.c  lmv_intent.c  lmv_internal.h  lmv_obd.c  lmv_object.c
lustre/lod/: lod_dev.c  lod_internal.h  lod_lov.c  lod_object.c  lod_pool.c  lod_qos.c  lproc_lod.c
lustre/lov/: autoMakefile.am  lov_cl_internal.h  lov_ea.c  lov_internal.h  lov_io.c  lov_lock.c  lov_log.c  lov_merge.c  lov_obd.c  lov_object.c  lov_offset.c  lov_pack.c  lov_page.c  lov_pool.c  lov_qos.c  lov_request.c  lovsub_lock.c  lproc_lov.c
lustre/lvfs/: Makefile.in  autoMakefile.am  fsfilt.c  fsfilt_ext3.c  fsfilt_reiserfs.c  lustre_quota_fmt.c  lustre_quota_fmt.h  lustre_quota_fmt_convert.c  lvfs_common.c  lvfs_darwin.c  lvfs_internal.h  lvfs_lib.c  lvfs_linux.c  lvfs_userfs.c  prng.c  quotafmt_test.c  upcall_cache.c
lustre/mdc/: autoMakefile.am  lproc_mdc.c  mdc_dev.c  (+6 more)
snmp/: lustre-snmp-trap.c  lustre-snmp-trap.h  lustre-snmp-util.c  lustre-snmp-util.h  lustre-snmp.c  lustre-snmp.h
(+846 files in other folders)
