#
# GPL HEADER START
#
# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 only,
# as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License version 2 for more details (a copy is included
# in the LICENSE file that accompanied this code).
#
# You should have received a copy of the GNU General Public License
# version 2 along with this program; If not, see
# http://www.lustre.org/lustre/docs/GPLv2.pdf
#
# Please contact Xyratex Technology, Ltd., Langstone Road, Havant, Hampshire.
# PO9 1SA, U.K. or visit www.xyratex.com if you need additional information or
# have any questions.
#
# GPL HEADER END
#

#
# Copyright (c) 2002, 2013, Xyratex Technology, Ltd . All rights reserved.
# Use is subject to license terms.
#

#
# Some portions of Lustre® software are subject to copyrights help by Intel Corp.
# Copyright (c) 2011-2013 Intel Corporation, Inc.
#

#
# This file is part of Lustre, http://www.lustre.org/
# Lustre® and the Lustre logo are registered trademarks of
# Xyratex Technology, Ltd  in the United States and/or other countries.
#

linuxdir = $(includedir)/linux

if UTILS
linux_HEADERS = lustre_types.h lustre_user.h
endif

EXTRA_DIST = lprocfs_status.h lustre_debug.h lustre_lib.h \
  lustre_dlm.h lustre_handles.h lustre_net.h obd_class.h obd_support.h  \
  lustre_log.h lustre_compat25.h lustre_fsfilt.h lustre_mds.h obd.h \
  lvfs.h lvfs_linux.h lustre_lite.h  lustre_quota.h \
  lustre_user.h lustre_types.h lustre_patchless_compat.h lustre_intent.h
